# kachabiti-chatbot

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  kachabiti-fb.csv  pyproject.toml  qashabiti_qa.csv
app/: main.py
app/api/: dependencies.py  errors.py  middleware.py
app/api/routes/: chat.py  debug.py  documents.py  health.py  questions.py  viewer.py
app/api/schemas/: chat.py  debug.py  documents.py  questions.py  viewer.py
app/application/services/: __init__.py  chat.py  ingestion.py  inspection.py  qa_csv_import.py  qdrant_questions.py  retrieval.py
app/core/: __init__.py  container.py  logging.py  settings.py
app/domain/: exceptions.py  interfaces.py  models.py
app/infrastructure/ai/: __init__.py  langsmith_integration.py  openai_provider.py
app/infrastructure/parsers/: __init__.py  base.py  chunker.py  csv_parser.py  pdf_parser.py  registry.py  text_parser.py
app/infrastructure/repositories/: file_metadata.py  qdrant_vector_store.py
app/infrastructure/storage/: file_store.py
docker/: entrypoint.sh
kachabiti_chatbot.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
scripts/: ingest_qa_csv.py  push_langsmith_prompt.py
tests/: conftest.py  test_api.py  test_chunker.py  test_langsmith_integration.py  test_qa_csv_import.py
web/: package-lock.json  package.json  tsconfig.tsbuildinfo
web/app/: globals.css  layout.tsx
web/app/api/chat/: route.ts
web/app/questions/: page.tsx
web/components/: chat-workspace.tsx  questions-workspace.tsx  sidebar.tsx
web/lib/: backend.ts  console.ts
(+2 files in other folders)
